--- a/The-Online-Store/src/main/resources/templates/registration.html
+++ b/The-Online-Store/src/main/resources/templates/registration.html
@@ -42,7 +42,7 @@
 
 				<h1>Registration</h1>
 
-				<form th:action="@{/registrationmethod}" method="post" th:object="${user}">
+				<form th:action="@{/save}" method="post" th:object="${user}">
 					<div class="form-group">
 						<label class="control-label" for="firstName"> First Name </label>
 						<input id="firstName" class="form-control" th:field="*{firstName}"
